# RAFT-Stereo

./: .gitignore  demo.py  evaluate_stereo.py  pyproject.toml  synth_datalist.py  train_stereo.py
core/: corr.py  extractor.py  raft_stereo.py  stereo_datasets.py
core/utils/: frame_utils.py  utils.py
sampler/: sampler_kernel.cu
